RESOLVED FIXED124031
[Mac] Crash at com.apple.WebCore: WebCore::MediaPlayerPrivateAVFoundationObjC::tracksDidChange + 26
https://bugs.webkit.org/show_bug.cgi?id=124031
Summary [Mac] Crash at com.apple.WebCore: WebCore::MediaPlayerPrivateAVFoundationObjC...
Jer Noble
Reported 2013-11-07 22:08:37 PST
[Mac] Crash at com.apple.WebCore: WebCore::MediaPlayerPrivateAVFoundationObjC::tracksDidChange + 26
Attachments
Patch (5.87 KB, patch)
2013-11-07 22:14 PST, Jer Noble
eric.carlson: review+
Jer Noble
Comment 1 2013-11-07 22:14:52 PST
Jer Noble
Comment 2 2013-11-08 09:53:40 PST
Note You need to log in before you can comment on or make changes to this bug.