[Mac] Crash at com.apple.WebCore: WebCore::MediaPlayerPrivateAVFoundationObjC::tracksDidChange + 26 https://bugs.webkit.org/show_bug.cgi?id=124031

Reviewed by Eric Carlson.

WTF::bind() causes errors when given a bare id pointer as a parameter,
when that parameter is casted to a specific NS type pointer (in this
case, a NSArray*) in order to pass it as a parameter to the bound
function.

Instead of passing around bare id pointers, wrap them in RetainPtr<>
objects before passing them to WTF::bind().

* platform/graphics/avfoundation/objc/MediaPlayerPrivateAVFoundationObjC.h:
* platform/graphics/avfoundation/objc/MediaPlayerPrivateAVFoundationObjC.mm:
(WebCore::MediaPlayerPrivateAVFoundationObjC::seekableTimeRangesDidChange):
(WebCore::MediaPlayerPrivateAVFoundationObjC::loadedTimeRangesDidChange):
(WebCore::MediaPlayerPrivateAVFoundationObjC::tracksDidChange):
(-[WebCoreAVFMovieObserver observeValueForKeyPath:ofObject:change:context:]):

Canonical link: https://commits.webkit.org/142230@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@158923 268f45cc-cd09-0410-ab3c-d52691b4dbfc